public class ConcretePerson extends Person {
    ConcretePerson(String name, String job, float weight, float height){
        super(name, job, weight, height);
    }
}
